# agent_from_scratch

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
agent_from_scratch/: agent.py  agent_context.py  agent_llm.py  container_env.py  eval_common.py  eval_gaia.py  eval_swebench.py  tool_common.py  tool_compute.py  tool_python.py  tool_wiki.py  vector_search.py  yaml_parser.py
eval_conf/: smoke.yaml  swebench_smoke.yaml
tests/: test_agent.py  test_agent_context.py  test_agent_llm.py  test_container_env.py  test_eval_common.py  test_eval_gaia.py  test_eval_swebench.py  test_functional_compute.py  test_functional_gaia.py  test_functional_swebench.py  test_functional_tool_python.py  test_functional_wiki.py  test_tool_compute.py  test_tool_python.py  test_tool_wiki.py  test_vector_search.py
