[project]
name = "agent_from_scratch"
version = "0.1.0"
description = "Leon's agents."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ruff",
    "pyright",
    "strictyaml",
    "click",
    "docker",
    "loguru",
    "requests",
    "textual>=8.2.7",
	"datasets",
    "pydantic",
    "fastapi",
    "uvicorn",
    "litellm>=1.90.2",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
eval_gaia = "agent_from_scratch.eval_gaia:main"
eval_swebench = "agent_from_scratch.eval_swebench:swebench_main"
# 
# [tool.uv]
# package = true

[dependency-groups]
build = ["pyright", "ruff"]
dev =  ["pytest-cov", "pytest", "pytest-dependency", "httpx"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
# suppresses errors for libraries that do not ship complete type stubs.
reportPrivateImportUsage = false

[tool.ruff]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=agent_from_scratch",
]
[tool.setuptools]
packages = ["agent_from_scratch"]
